--- a/style/main.less
+++ b/style/main.less
@@ -1,8 +1,3 @@
-
-
-
-
-
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
@@ -17,16 +12,6 @@
   }
 
  
-  
-  
-
-  
-  
-
-
-
-
-
 @import "reset.css";
 
 @1: #222831;
@@ -265,7 +250,6 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 }
 
 .header{
-    
     position: fixed;
     top: 0;
     left: 0;
@@ -367,10 +351,17 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 
 
 .elements__section-grid{
+    
+
+    height: 1000px;
+    background: #AD8B73;
+
+
+
+
     margin-top: 227px;
     margin-bottom: 227px;
     display: grid;
-    height: 100%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-gap: 0.2rem;    
