--- a/style/main.less
+++ b/style/main.less
@@ -246,108 +246,121 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 
   body .inverted .header__container{
     height: 5rem;
-
 }
 
-.header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 10;
-    background-color: @1;
-    .header__container{
-        transition: height .5s ease;
-        border-bottom: 2px solid rgba(255,255,255,.05);
-        max-width: 1200px;
-        margin: 0px auto;
-        display: flex; 
-        padding: 0px 30px;
-        align-items: center;
-        justify-content: space-between;
-        height: 8rem;
-        .header__logo{
-           
-            .logo__text{
-                font-size: 36px;
-                position: relative;
-                z-index: 8;
-                color: white;
-                letter-spacing: 3px;
-                font-family: 'Roboto';
-                font-style: normal;
-                font-weight: 400;
+
+
+
+
+._mobile.scroll-down header{
+    transform: translate3d(0, -100%, 0);
+}
+    
+
+
+
+    .header{
+        
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 10;
+        background-color: @1;
+        .header__container{
+            transition: height .5s ease;
+            border-bottom: 2px solid rgba(255,255,255,.05);
+            max-width: 1200px;
+            margin: 0px auto;
+            display: flex; 
+            padding: 0px 30px;
+            align-items: center;
+            justify-content: space-between;
+            height: 8rem;
+            .header__logo{
+               
+                .logo__text{
+                    font-size: 36px;
+                    position: relative;
+                    z-index: 8;
+                    color: white;
+                    letter-spacing: 3px;
+                    font-family: 'Roboto';
+                    font-style: normal;
+                    font-weight: 400;
+                    
+                }
+                
+                
+                
+                
                 
             }
-            
-            
-            
-            
-            
-        }
-        .menu__body{
-            .menu__list{
-                li{
-                    position: relative;
-                    margin: 0px 0px 0px 60px;
-                    display: flex;
-                    align-items: center;
-                    
-                    .menu__link{
-                        color: white; 
-                        font-size: 18px;
-                    }
-                    .menu__sub-list{
-
-                        
-                        &::before {
-                            content: "";
-                            display: block;
-                            width: 0;
-                            height: 0;
-                            border-style: solid;
-                            border-width: 0 4.5px 5px 4.5px;
-                            border-color: transparent transparent @4 transparent;
-                            position: absolute;
-                            top: -5px;
-                            left: 34px;
-                            
-                        }
-                        
-                        
-                         
-                       
-                        box-shadow: 5px 5px 0 (@2);
-                        position: absolute;
-                        top: 100%;
-                        left: 0;
-                        background-color: @4;
-                        padding: 15px;
-                        min-width: 187px;
-                        align-items: center;
+            .menu__body{
+                .menu__list{
+                    li{
+                        position: relative;
+                        margin: 0px 0px 0px 60px;
                         display: flex;
-                        flex-direction: column;
-                        li{
-                            
-                            margin: 0px 0px 24px 0px;
-                            .menu__sub-link{
-                                color: @1;
-                                padding-bottom: 10px;
-                                font-weight: 600;
-                                font-family: 'Roboto';
-                                font-size: 18px;
-                                line-height: 100%;
-                                }
+                        align-items: center;
+                        
+                        .menu__link{
+                            color: white; 
+                            font-size: 18px;
                         }
-                        li:last-child{
-                            margin: 0px 0px 0px 0px;
+                        .menu__sub-list{
+    
+                            
+                            &::before {
+                                content: "";
+                                display: block;
+                                width: 0;
+                                height: 0;
+                                border-style: solid;
+                                border-width: 0 4.5px 5px 4.5px;
+                                border-color: transparent transparent @4 transparent;
+                                position: absolute;
+                                top: -5px;
+                                left: 34px;
+                                
+                            }
+                            
+                            
+                             
+                           
+                            box-shadow: 5px 5px 0 (@2);
+                            position: absolute;
+                            top: 100%;
+                            left: 0;
+                            background-color: @4;
+                            padding: 15px;
+                            min-width: 187px;
+                            align-items: center;
+                            display: flex;
+                            flex-direction: column;
+                            li{
+                                
+                                margin: 0px 0px 24px 0px;
+                                .menu__sub-link{
+                                    color: @1;
+                                    padding-bottom: 10px;
+                                    font-weight: 600;
+                                    font-family: 'Roboto';
+                                    font-size: 18px;
+                                    line-height: 100%;
+                                    }
+                            }
+                            li:last-child{
+                                margin: 0px 0px 0px 0px;
+                            }
                         }
                     }
                 }
             }
         }
     }
-}
+
+
 
 
 .elements__section-grid{
