--- a/style/main.less
+++ b/style/main.less
@@ -182,22 +182,7 @@ h1{
 .menu__link:hover::after{
     transform: scaleX(1);
 }
-.menu__sub-link::after{
-    content: '';
-    width: 100%;
-    height: 2px;
-    background-color:black;
-    position: absolute;
-    left: 0;
-    bottom: -2px;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform 0.5s ease;
-}
 
-.menu__sub-link:hover::after{
-    transform: scaleX(1);
-}
 
 
  /////////////////////////////////transform: scaleX(1);///////////////////////////////////
@@ -266,7 +251,6 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
         left: 0;
         width: 100%;
         z-index: 10;
-        background-color: @1;
         .header__container{
             transition: height .5s ease;
             border-bottom: 2px solid rgba(255,255,255,.05);
@@ -298,6 +282,20 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
             }
             .menu__body{
                 .menu__list{
+                    .mega-menu_section{
+                        .menu__sub-list{
+                            .sub-list__li-tag{
+                                
+                                flex-direction: column;
+                                display: flex;
+                                width: 25%;
+                                border-right: 1px solid white;
+                                .menu__sub-list__down{
+                                    padding-top: 25px;
+                                }
+                            }
+                        }
+                    }
                     li{
                         position: relative;
                         margin: 0px 0px 0px 60px;
@@ -311,19 +309,19 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                         .menu__sub-list{
     
                             
-                            &::before {
-                                content: "";
-                                display: block;
-                                width: 0;
-                                height: 0;
-                                border-style: solid;
-                                border-width: 0 4.5px 5px 4.5px;
-                                border-color: transparent transparent @4 transparent;
-                                position: absolute;
-                                top: -5px;
-                                left: 34px;
+                           // &::before {
+                              //  content: "";
+                              //  display: block;
+                               // width: 0;
+                               // height: 0;
+                              //  border-style: solid;
+                              //  border-width: 0 4.5px 5px 4.5px;
+                              //  border-color: transparent transparent @4 transparent;
+                              //  position: absolute;
+                              //  top: -5px;
+                              //  left: 34px;
                                 
-                            }
+                           // }
                             
                             
                              
@@ -331,23 +329,36 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                             box-shadow: 5px 5px 0 (@2);
                             position: absolute;
                             top: 100%;
-                            left: 0;
-                            background-color: @4;
+                            right: 0;
+                            background: rgba(35,35,35,1);
                             padding: 15px;
-                            min-width: 187px;
+
+
+                            min-width: 1200px;
+                            margin-right: -279px;
+
+
                             align-items: center;
                             display: flex;
-                            flex-direction: column;
+                            
                             li{
                                 
                                 margin: 0px 0px 24px 0px;
+                                .menu__sub-link__title{
+                                    color: white;
+                                }
                                 .menu__sub-link{
-                                    color: @1;
-                                    padding-bottom: 10px;
+                                    display: flex;
+                                    flex-direction: column;
+                                    color: #9d9d9d;
+                                    padding-bottom: 5px;
                                     font-weight: 600;
                                     font-family: 'Roboto';
                                     font-size: 18px;
                                     line-height: 100%;
+                                    &:hover{
+                                        color: white;
+                                    }
                                     }
                             }
                             li:last-child{
@@ -366,13 +377,18 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 .elements__section-grid{
     
 
-    height: 1000px;
-    background: #AD8B73;
+    
+    
+    height: 1000px; /* You must set a specified height */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; 
+    background-image:url("../img/image__one.jpg");
+    opacity: 0.8;
 
 
 
-
-    margin-top: 227px;
+    margin-top: -2px;
     margin-bottom: 227px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -645,7 +661,7 @@ body {
 
 
     .footer__container{
-        margin-top: -199px;
+        margin-top: -218px;
         .flex_center{
            display: flex;
            flex-direction: column;
@@ -873,6 +889,10 @@ body {
 /////////////////////////////////////////////////////////////////swiper////////////////////////////////////////////////////////////////
 
 @media only screen and (min-width: 1px) {
+
+
+
+
     .menu__list{
         display: flex;
         align-items: center;
@@ -903,6 +923,14 @@ body {
 
 @media only screen and (max-width: 1900px){
    
+
+   
+
+   .footer__container{
+        margin-top: -216px;
+        
+   }
+
     .container{
         width: 100%;
     }
