--- a/style/main.less
+++ b/style/main.less
@@ -232,7 +232,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 
 
   body .inverted .header__container{
-    height: 5rem;
+    height: 4rem;
 }
 
 
@@ -286,6 +286,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                 .menu__list{
                     .mega-menu_section{
                         .menu__sub-list{
+                            margin-top: -2px;
                             .sub-list__li-tag{
                                 
                                 flex-direction: column;
@@ -348,6 +349,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                                 margin: 0px 0px 24px 0px;
                                 .menu__sub-link__title{
                                     color: white;
+                                    margin-top: 10px;
                                 }
                                 .menu__sub-link{
                                     display: flex;
@@ -363,9 +365,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                                     }
                                     }
                             }
-                            li:last-child{
-                                margin: 0px 0px 0px 0px;
-                            }
+                            
                         }
                     }
                 }
@@ -656,7 +656,7 @@ body {
 
 :root{
     --main-radius:5px;
-    //--main-padding:20px;
+    
 }
 
 
@@ -695,7 +695,7 @@ body {
         background: @6;
         grid-area: grid__container;
         border-radius: var(--main-radius);
-        padding-top: var(--main-padding);
+        
 
     }
 
@@ -704,7 +704,7 @@ body {
         background: #CEAB93;
         grid-area: nav__section__one;
         border-radius: var(--main-radius);
-        padding-top: var(--main-padding);
+        
         grid-auto-rows: 40px;
     
             
@@ -715,7 +715,7 @@ body {
         background: #AD8B73;
         grid-area: nav__section__two;
         border-radius: var(--main-radius);
-        padding-top: var(--main-padding);
+        
         grid-auto-rows: 40px;
     }
     .nav__section__three{
@@ -723,14 +723,14 @@ body {
         background: #AD8B73;
         grid-area: nav__section__three;
         border-radius: var(--main-radius);
-        padding-top: var(--main-padding);
+        
     }
     .paragraph__section{
         text-align: center;
         background: #C3B091;
         grid-area: paragraph__section;
         border-radius: var(--main-radius);
-        padding-top: var(--main-padding);
+        
     }
     .subscribe__section{
         .footer-heading{
@@ -744,7 +744,7 @@ body {
         background: #FFEDDB;
         grid-area: subscribe__section;
         border-radius: var(--main-radius);
-        padding-top: var(--main-padding);
+        
     }
     .follow_us_container{
         
@@ -756,7 +756,7 @@ body {
         background: #DBE2EF;
         grid-area: follow_us_container;
         border-radius: var(--main-radius);
-        padding-top: var(--main-padding);
+        
     }
     .copyright__section{
         
@@ -764,7 +764,7 @@ body {
         background: @5;
         grid-area: copyright__section;
         border-radius: var(--main-radius);
-        padding-top: var(--main-padding);
+        
     }
 
     .footer__listmenu{
