--- a/style/main.less
+++ b/style/main.less
@@ -905,7 +905,7 @@ body {
         display: flex;
         align-items: center;
         .menu__link{
-            padding: 26px 0px;
+            padding: 19px 0px;
         }
         .menu__sub-list{
             
@@ -985,7 +985,9 @@ body {
        ._lock .header.inverted .header__container .menu__body .menu__list li .menu__link{
         color: white;
        }
-   
+       ._lock .header.inverted .header__container .menu__body .menu__list{
+        margin-top: -35px;
+       }
 
        ._lock .inverted .menu__arrowfalse {
         border-top: 10px solid #f7f7f7;
@@ -1084,9 +1086,10 @@ body .header .header__container .menu__body .menu__list > li._active .menu__sub-
         z-index: 2;
         }
     .menu__list{
-        flex-direction: column;
-        align-items: flex-start;
-        margin-top: 25px;
+       margin-left: -68px;
+       flex-direction: column;
+       align-items: flex-start;
+       margin-top: 21px;
         li{
             flex-wrap: wrap;
         }
