--- a/style/main.less
+++ b/style/main.less
@@ -301,7 +301,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                     }
                     li{
                         position: relative;
-                        margin: 0px 0px 0px 60px;
+                        
                         display: flex;
                         align-items: center;
                         
@@ -450,10 +450,13 @@ body._mobile .menu__list > li._active .menu__arrow{
     display: none;
    }
 body._mobile .menu__arrow{
+    position: absolute;
+    right: 0px;
+    top: 40%;
     display: block;
     width: 0;
     height: 0;
-    margin: 0px 0px 0px 10px;
+    
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
     border-top: 10px solid white;
@@ -905,7 +908,7 @@ body {
         display: flex;
         align-items: center;
         .menu__link{
-            padding: 19px 0px;
+            padding: 12px 0px;
         }
         .menu__sub-list{
             
@@ -984,10 +987,18 @@ body {
        }
        ._lock .header.inverted .header__container .menu__body .menu__list li .menu__link{
         color: white;
+        display: block;
        }
-       ._lock .header.inverted .header__container .menu__body .menu__list{
-        margin-top: -35px;
+       ._lock .header.inverted .header__container .menu__body .menu__list li{
+        border-bottom: 1px solid rgba(255,255,255,0.06);
+        display: block;
+        
+        
        }
+       
+
+
+       
 
        ._lock .inverted .menu__arrowfalse {
         border-top: 10px solid #f7f7f7;
@@ -1086,13 +1097,10 @@ body .header .header__container .menu__body .menu__list > li._active .menu__sub-
         z-index: 2;
         }
     .menu__list{
-       margin-left: -68px;
-       flex-direction: column;
-       align-items: flex-start;
-       margin-top: 21px;
+       display: block;
         li{
-            flex-wrap: wrap;
-        }
+            display: block; 
+            }
     }
 }
 .menu__body._active{
