--- a/style/main.css
+++ b/style/main.css
@@ -189,6 +189,9 @@ body .inverted .header__container {
   font-style: normal;
   font-weight: 400;
 }
+.header .header__container .menu__body .menu__list li {
+  margin: 0px 0px 0px 60px;
+}
 .header .header__container .menu__body .menu__list .mega-menu_section .menu__sub-list {
   margin-top: -2px;
 }
@@ -684,6 +687,15 @@ body {
     width: 100%;
     min-width: 100%;
   }
+  .header .header__container .menu__body .menu__list li {
+    margin: 0px 0px 0px -10px;
+  }
+  body .inverted .menu__body .menu__list {
+    margin-top: -30px;
+  }
+  ._lock .menu__body .menu__list {
+    margin-top: -15px;
+  }
   ._lock .inverted .menu__arrowfalse {
     border-top: 10px solid #f7f7f7;
   }
@@ -701,7 +713,11 @@ body {
   }
   body .header .header__container .menu__body .menu__list li .menu__sub-list {
     position: relative;
+    background-color: #251B37;
     display: none;
+  }
+  .header .header__container .menu__body .menu__list li .menu__sub-list li .menu__sub-link {
+    color: white;
   }
   body .header .header__container .menu__body .menu__list > li._active .menu__sub-list {
     display: block;
