--- a/style/main.less
+++ b/style/main.less
@@ -289,7 +289,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                     }
                     .mega-menu_section{
                         .menu__sub-list{
-                            margin-top: -2px;
+                            
                             .sub-list__li-tag{
                                 
                                 flex-direction: column;
@@ -311,6 +311,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                         .menu__link{
                             color: white; 
                             font-size: 18px;
+                            padding: 24px 0px;
                         }
                         .menu__sub-list{
     
@@ -1012,10 +1013,10 @@ body {
         margin: 0px 0px 0px -10px;
     }
     body .inverted .menu__body .menu__list{
-        margin-top: -30px;
+        margin-top: -40px;
     }
     ._lock .menu__body .menu__list{
-        margin-top: -15px;
+        margin-top: 17px;
     }
 
 
