--- a/style/main.css
+++ b/style/main.css
@@ -192,9 +192,6 @@ body .inverted .header__container {
 .header .header__container .menu__body .menu__list li {
   margin: 0px 0px 0px 60px;
 }
-.header .header__container .menu__body .menu__list .mega-menu_section .menu__sub-list {
-  margin-top: -2px;
-}
 .header .header__container .menu__body .menu__list .mega-menu_section .menu__sub-list .sub-list__li-tag {
   flex-direction: column;
   display: flex;
@@ -212,6 +209,7 @@ body .inverted .header__container {
 .header .header__container .menu__body .menu__list li .menu__link {
   color: white;
   font-size: 18px;
+  padding: 24px 0px;
 }
 .header .header__container .menu__body .menu__list li .menu__sub-list {
   box-shadow: 5px 5px 0 #393E46;
@@ -691,10 +689,10 @@ body {
     margin: 0px 0px 0px -10px;
   }
   body .inverted .menu__body .menu__list {
-    margin-top: -30px;
+    margin-top: -40px;
   }
   ._lock .menu__body .menu__list {
-    margin-top: -15px;
+    margin-top: 17px;
   }
   ._lock .inverted .menu__arrowfalse {
     border-top: 10px solid #f7f7f7;
