menu__sub-list _mobile save part

--- a/style/main.css
+++ b/style/main.css
@@ -845,4 +845,14 @@ body {
   .inverted.header .header__container .menu__body .menu__list li .menu__sub-list {
     width: 100%;
   }
+  ._mobile .menu__body .menu__list li {
+    display: block;
+  }
+  ._mobile .header .header__container .menu__body .menu__list li {
+    display: block;
+  }
+  ._mobile .header .header__container .menu__body .menu__list li {
+    margin-bottom: 10px;
+    margin-top: -10px;
+  }
 }
