--- a/style/main.less
+++ b/style/main.less
@@ -1201,8 +1201,17 @@ body .footer__container .paragraph__section{
         width: 100%;
     }
 
-    
+    ._mobile .menu__body .menu__list li {
+        display: block;
+    }
 
+    ._mobile .header .header__container .menu__body .menu__list li{
+        display: block;
+    }
+    ._mobile .header .header__container .menu__body .menu__list li {
+        margin-bottom: 10px;
+        margin-top: -10px;
+    }
 }
 
 
